# WaveSim

./: BuildGraphs.py  CMakeLists.txt  README.md  input.inp  waves.cpp
src/: CMakeLists.txt  algebra.cpp  algebra.hpp  builder.cpp  builder.hpp  images.cpp  images.hpp  reader.cpp  reader.hpp  saver.cpp  saver.hpp  solver.cpp  solver.hpp
