# SET CMAKE MIN VERSION AND PROJECT NAME
CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(WaveSim VERSION 1.0.0)

# ADD REQUIRED PACKAGES
OPTION (USE_OpenMP "Use OpenMP" ON)
IF(USE_OpenMP)
  FIND_PACKAGE(OpenMP)
  IF(OPENMP_FOUND)
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  ENDIF()
ENDIF()


# SPECIFY C++ STANDARD
ADD_LIBRARY(compiler_flags INTERFACE)
TARGET_COMPILE_FEATURES(compiler_flags INTERFACE cxx_std_17)

# ADD SRC SUBDIR
ADD_SUBDIRECTORY(src)
list(APPEND EXTRA_LIBS Solver)
list(APPEND EXTRA_LIBS Builder)
list(APPEND EXTRA_LIBS Reader)


# ADD EXECTUTABLE
ADD_EXECUTABLE(WaveSim waves.cpp)


FIND_PACKAGE(fmt REQUIRED)
INCLUDE_DIRECTORIES(${fmt_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(WaveSim PUBLIC ${EXTRA_LIBS} compiler_flags fmt::fmt)

INSTALL(TARGETS WaveSim RUNTIME DESTINATION bin)

include(InstallRequiredSystemLibraries)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
#set(CPACK_PACKAGE_VERSION_MAJOR "${Tutorial_VERSION_MAJOR}")
#set(CPACK_PACKAGE_VERSION_MINOR "${Tutorial_VERSION_MINOR}")
set(CPACK_SOURCE_GENERATOR "TGZ")
include(CPack)
